update swagger 2
